Add IT for streaming query handler
Signed-off-by: Chen Dai <daichen@amazon.com>