@@ -10,13 +10,14 @@ import static org.opensearch.sql.data.model.ExprValueUtils.tupleValue;
 import static org.opensearch.sql.datasource.model.DataSourceMetadata.DEFAULT_RESULT_INDEX;
 import static org.opensearch.sql.spark.execution.statestore.StateStore.getStatement;
 
-import com.amazonaws.services.emrserverless.model.GetJobRunResult;
 import com.amazonaws.services.emrserverless.model.JobRunState;
+import com.google.common.collect.ImmutableList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.json.JSONObject;
 import org.junit.Assert;
+import org.junit.Ignore;
 import org.junit.Test;
 import org.opensearch.action.index.IndexRequest;
 import org.opensearch.sql.data.model.ExprValue;
@@ -24,12 +25,20 @@ import org.opensearch.sql.spark.asyncquery.model.AsyncQueryExecutionResponse;
 import org.opensearch.sql.spark.execution.statement.StatementModel;
 import org.opensearch.sql.spark.execution.statement.StatementState;
 import org.opensearch.sql.spark.execution.statestore.StateStore;
+import org.opensearch.sql.spark.flint.FlintIndexType;
 import org.opensearch.sql.spark.response.JobExecutionResponseReader;
 import org.opensearch.sql.spark.rest.model.CreateAsyncQueryRequest;
 import org.opensearch.sql.spark.rest.model.CreateAsyncQueryResponse;
 import org.opensearch.sql.spark.rest.model.LangType;
 
 public class AsyncQueryGetResultSpecTest extends AsyncQueryExecutorServiceSpec {
+
+  private final FlintDatasetMock mockIndex =
+      new FlintDatasetMock(
+              "DROP SKIPPING INDEX ON mys3.default.http_logs",
+              FlintIndexType.SKIPPING,
+              "flint_mys3_default_http_logs_skipping_index")
+          .latestId("skippingindexid");
 
   @Test
   public void testInteractiveQueryGetResult() {
@@ -39,13 +48,13 @@ public class AsyncQueryGetResultSpecTest extends AsyncQueryExecutorServiceSpec {
         .withInteraction(
             interaction -> {
               JSONObject result = interaction.pluginSearchQueryResult();
-              interaction.emrJobWriteResultDoc();
+              interaction.emrJobWriteResultDoc(createResultDoc(interaction.queryId));
               interaction.emrJobUpdateStatementState(StatementState.SUCCESS);
               return result;
             })
         .assertQueryResults("running", null)
         .withoutInteraction()
-        .assertQueryResults("SUCCESS", List.of(tupleValue(Map.of("1", 1))));
+        .assertQueryResults("SUCCESS", ImmutableList.of(tupleValue(Map.of("1", 1))));
   }
 
   @Test
@@ -54,7 +63,47 @@ public class AsyncQueryGetResultSpecTest extends AsyncQueryExecutorServiceSpec {
         .withInteraction(
             interaction -> {
               JSONObject result = interaction.pluginSearchQueryResult();
-              interaction.emrJobWriteResultDoc();
+              interaction.emrJobWriteResultDoc(createEmptyResultDoc(interaction.queryId));
+              interaction.emrJobUpdateJobState(JobRunState.SUCCESS);
+              return result;
+            })
+        .assertQueryResults("running", null)
+        .withoutInteraction()
+        .assertQueryResults("SUCCESS", ImmutableList.of());
+  }
+
+  @Test
+  public void testStreamingQueryGetResult() {
+    // Create mock index with index state refreshing
+    mockIndex.createIndex();
+    new MockFlintSparkJob(mockIndex.latestId).refreshing();
+
+    createAsyncQuery(
+            "CREATE SKIPPING INDEX ON mys3.default.http_logs "
+                + "(l_orderkey VALUE_SET) WITH (auto_refresh = true)")
+        .withInteraction(
+            interaction -> {
+              JSONObject result = interaction.pluginSearchQueryResult();
+              interaction.emrJobWriteResultDoc(createEmptyResultDoc(interaction.queryId));
+              interaction.emrJobUpdateJobState(JobRunState.SUCCESS);
+              return result;
+            })
+        .assertQueryResults("running", null)
+        .withoutInteraction()
+        .assertQueryResults("SUCCESS", ImmutableList.of());
+  }
+
+  @Ignore
+  public void testDropIndexQueryGetResult() {
+    // Create mock index with index state refreshing
+    mockIndex.createIndex();
+    new MockFlintSparkJob(mockIndex.latestId).refreshing();
+
+    createAsyncQuery(mockIndex.query)
+        .withInteraction(
+            interaction -> {
+              JSONObject result = interaction.pluginSearchQueryResult();
+              interaction.emrJobWriteResultDoc(createEmptyResultDoc(interaction.queryId));
               interaction.emrJobUpdateJobState(JobRunState.SUCCESS);
               return result;
             })
@@ -73,7 +122,7 @@ public class AsyncQueryGetResultSpecTest extends AsyncQueryExecutorServiceSpec {
     private Interaction interaction;
 
     AssertionHelper(String query) {
-      CustomEMRSClient emrClient = new CustomEMRSClient();
+      LocalEMRSClient emrClient = new LocalEMRSClient();
       this.queryService =
           createAsyncQueryExecutorService(
               emrClient,
@@ -117,21 +166,6 @@ public class AsyncQueryGetResultSpecTest extends AsyncQueryExecutorServiceSpec {
     }
   }
 
-  private class CustomEMRSClient extends LocalEMRSClient {
-    private String jobState;
-
-    @Override
-    public GetJobRunResult getJobRunResult(String applicationId, String jobId) {
-      GetJobRunResult result = super.getJobRunResult(applicationId, jobId);
-      result.getJobRun().setState(jobState);
-      return result;
-    }
-
-    void setJobState(String jobState) {
-      this.jobState = jobState;
-    }
-  }
-
   /** Define an interaction between PPL plugin and EMR-S job. */
   private interface Interaction {
 
@@ -143,11 +177,11 @@ public class AsyncQueryGetResultSpecTest extends AsyncQueryExecutorServiceSpec {
    * called in any order to simulate concurrent scenario.
    */
   private class InteractionStep {
-    private final CustomEMRSClient emrClient;
-    private final String queryId;
-    private final String resultIndex;
+    private final LocalEMRSClient emrClient;
+    final String queryId;
+    final String resultIndex;
 
-    private InteractionStep(CustomEMRSClient emrClient, String queryId, String resultIndex) {
+    private InteractionStep(LocalEMRSClient emrClient, String queryId, String resultIndex) {
       this.emrClient = emrClient;
       this.queryId = queryId;
       this.resultIndex = resultIndex == null ? DEFAULT_RESULT_INDEX : resultIndex;
@@ -159,13 +193,10 @@ public class AsyncQueryGetResultSpecTest extends AsyncQueryExecutorServiceSpec {
     }
 
     /** Simulate EMR-S bulk writes query_execution_result with refresh = wait_for */
-    void emrJobWriteResultDoc() {
+    void emrJobWriteResultDoc(Map<String, Object> resultDoc) {
       try {
         IndexRequest request =
-            new IndexRequest()
-                .index(resultIndex)
-                .setRefreshPolicy(WAIT_UNTIL)
-                .source(createResultDoc(queryId));
+            new IndexRequest().index(resultIndex).setRefreshPolicy(WAIT_UNTIL).source(resultDoc);
         client.index(request).get();
       } catch (Exception e) {
         Assert.fail("Failed to write result doc: " + e.getMessage());
@@ -183,10 +214,27 @@ public class AsyncQueryGetResultSpecTest extends AsyncQueryExecutorServiceSpec {
     }
   }
 
+  private Map<String, Object> createEmptyResultDoc(String queryId) {
+    Map<String, Object> document = new HashMap<>();
+    document.put("result", ImmutableList.of());
+    document.put("schema", ImmutableList.of());
+    document.put("jobRunId", "XXX");
+    document.put("applicationId", "YYY");
+    document.put("dataSourceName", DATASOURCE);
+    document.put("status", "SUCCESS");
+    document.put("error", "");
+    document.put("queryId", queryId);
+    document.put("queryText", "SELECT 1");
+    document.put("sessionId", "ZZZ");
+    document.put("updateTime", 1699124602715L);
+    document.put("queryRunTime", 123);
+    return document;
+  }
+
   private Map<String, Object> createResultDoc(String queryId) {
     Map<String, Object> document = new HashMap<>();
-    document.put("result", new String[] {"{'1':1}"});
-    document.put("schema", new String[] {"{'column_name':'1','data_type':'integer'}"});
+    document.put("result", ImmutableList.of("{'1':1}"));
+    document.put("schema", ImmutableList.of("{'column_name':'1','data_type':'integer'}"));
     document.put("jobRunId", "XXX");
     document.put("applicationId", "YYY");
     document.put("dataSourceName", DATASOURCE);
